--- a/testimonianze.html
+++ b/testimonianze.html
@@ -68,11 +68,11 @@
                         <a href="Foto/foto33.jpg" target="_blank"><img src="Foto/foto33.jpg" alt="Foto 33"></a>
                         
                         <video controls>
-                            <source src="Video/video1.mp4" type="video/mp4">
+                            <source src="Foto/video1.mp4" type="video/mp4">
                             Il tuo browser non supporta il tag video.
                         </video>
                         <video controls>
-                            <source src="Video/video2.mp4" type="video/mp4">
+                            <source src="Foto/video2.mp4" type="video/mp4">
                             Il tuo browser non supporta il tag video.
                         </video>
                     </div>
