--- a/testimonianze.html
+++ b/testimonianze.html
@@ -115,24 +115,23 @@
                     </div>
                 </div>
                 
-                <div id="commenti" class="section">
-                    <div class="container">
-                        <h2>Commenti</h2>
-                        <div id="commenti-wrapper" class="commenti-wrapper">
-                            <!-- I commenti esistenti verranno caricati qui dinamicamente -->
-                        </div>
-                        <h3>Lascia un commento</h3>
-                        <form id="form-commento">
-                            <input type="text" id="nome" name="nome" placeholder="Il tuo nome" required>
-                            <textarea id="commento" name="commento" placeholder="Il tuo commento" required></textarea>
-                            <button type="submit" class="btn">Invia Commento</button>
-                        </form>
-                        <div id="feedback-message"></div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+     <div class="commento-preimpostato">
+    <div class="avatar"></div>
+    <div class="commento-contenuto">
+        <h4>Utente 1</h4>
+        <p>Questo è un commento pre-impostato molto carino e interessante.</p>
+        <div class="data">23 maggio 2024</div>
+    </div>
+</div>
+
+<div class="commento-preimpostato">
+    <div class="avatar"></div>
+    <div class="commento-contenuto">
+        <h4>Utente 2</h4>
+        <p>Wow, davvero un'esperienza fantastica! Non vedo l'ora di tornare.</p>
+        <div class="data">18 giugno 2024</div>
+    </div>
+</div>
 
     <footer>
         <div class="container">
