--- a/testimonianze.html
+++ b/testimonianze.html
@@ -118,18 +118,18 @@
      <div class="commento-preimpostato">
     <div class="avatar"></div>
     <div class="commento-contenuto">
-        <h4>Utente 1</h4>
-        <p>Questo è un commento pre-impostato molto carino e interessante.</p>
-        <div class="data">23 maggio 2024</div>
+        <h4>Alessandro</h4>
+        <p>Davvero una bellissima esperienza, guida super gentile, nessun intoppo durante il safari. Tutto perfetto!</p>
+        <div class="data">23 Settembre 2024</div>
     </div>
 </div>
 
 <div class="commento-preimpostato">
     <div class="avatar"></div>
     <div class="commento-contenuto">
-        <h4>Utente 2</h4>
-        <p>Wow, davvero un'esperienza fantastica! Non vedo l'ora di tornare.</p>
-        <div class="data">18 giugno 2024</div>
+        <h4>Utente</h4>
+        <p>Wow, davvero un'esperienza fantastica! Spero di rifare un avventura simile!</p>
+        <div class="data">18 Agosto 2024</div>
     </div>
 </div>
 
