--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
                 <div class="dropdown-content">
                     <a href="safari.html">Safari</a>
                     <a href="safari-blu.html">Safari Blu</a>
-                    
                     <a href="testimonianze.html">Testimonianze</a>
                     <a href="contatti.html">Contatti</a>
                 </div>
@@ -31,35 +30,26 @@
             <div class="hero-text">
                 <h2>Scopri il Kenya</h2>
                 <p>Avventure, bellezze naturali e cultura ti aspettano.<br> Vieni a scoprirle con noi!</p>
-                
             </div>
         </div>
     </section>
-
     <!-- Sezione "Chi Siamo" inclusa nella pagina "Home" -->
     <section id="about">
         <div class="container">
             <h2>Chi Siamo?</h2>
-            <h4>Chi siamo
-                La nostra è una agenzia locale, quindi è interamente gestita da persone del luogo. Questo sito ci permette di ampliare i nostri orizzonti;
-               <br> solamente il sito non è merito nostro, ma bensì di un ragazzo che, facendo un safari blu con noi, ci ha permesso di sbarcare in Italia, ha deciso di darci una mano creando questo sito per noi!  
-                <br>Dovreste scegliere la nostra agenzia per varie motivazioni, tra queste: i prezzi vantaggiosi, l’affidabilità date le persone testimonianti che hanno usufruito dei nostri servizi e per il fatto che in questo modo potete sostenere un agenzia locale rispetto ad un qualsiasi altro tipo di agenzia.
-            </h4>
+            <h4 style="text-align: justify;">La nostra è una agenzia locale, quindi è interamente gestita da persone del luogo. Questo sito ci permette di ampliare i nostri orizzonti; solamente il sito non è merito nostro, ma bensì di un ragazzo che, facendo un safari blu con noi, ci ha permesso di sbarcare in Italia, ha deciso di darci una mano creando questo sito per noi! Dovreste scegliere la nostra agenzia per varie motivazioni, tra queste: i prezzi vantaggiosi, l'affidabilità date le persone testimonianti che hanno usufruito dei nostri servizi e per il fatto che in questo modo potete sostenere un agenzia locale rispetto ad un qualsiasi altro tipo di agenzia.</h4>
         </div>
     </section>
-
     <footer>
         <div class="container">
             <p>&copy; 2024 Project Kenya. Tutti i diritti riservati.</p>
         </div>
     </footer>
-
     <!-- Script per mostrare/nascondere il contenuto del menu a tendina -->
     <script>
         document.querySelector('.menu-button').addEventListener('click', function() {
             document.querySelector('.dropdown-content').classList.toggle('show');
         });
-
         // Chiudi il menu a tendina se si fa clic altrove
         window.onclick = function(event) {
             if (!event.target.matches('.menu-button')) {
