--- a/index.html
+++ b/index.html
@@ -5,6 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Kenya - Home</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        #about {
+            padding: 100px 0;
+            background-color: #f8f8f8;
+        }
+        #about .container {
+            max-width: 600px;
+            margin: 0 auto;
+            text-align: center;
+        }
+        #about h2 {
+            font-family: 'Playfair Display', serif;
+            font-size: 2.8rem;
+            font-weight: 700;
+            margin-bottom: 2rem;
+        }
+        #about h4 {
+            font-family: 'Playfair Display', serif;
+            font-size: 1.4rem;
+            line-height: 1.8;
+            text-align: justify;
+            margin-bottom: 2rem;
+        }
+    </style>
 </head>
 <body class="index">
     <header>
@@ -37,7 +64,7 @@
     <section id="about">
         <div class="container">
             <h2>Chi Siamo?</h2>
-            <h4 style="text-align: justify;">La nostra è una agenzia locale, quindi è interamente gestita da persone del luogo. Questo sito ci permette di ampliare i nostri orizzonti; solamente il sito non è merito nostro, ma bensì di un ragazzo che, facendo un safari blu con noi, ci ha permesso di sbarcare in Italia, ha deciso di darci una mano creando questo sito per noi! Dovreste scegliere la nostra agenzia per varie motivazioni, tra queste: i prezzi vantaggiosi, l'affidabilità date le persone testimonianti che hanno usufruito dei nostri servizi e per il fatto che in questo modo potete sostenere un agenzia locale rispetto ad un qualsiasi altro tipo di agenzia.</h4>
+            <h4>La nostra è una agenzia locale, quindi è interamente gestita da persone del luogo. Questo sito ci permette di ampliare i nostri orizzonti; solamente il sito non è merito nostro, ma bensì di un ragazzo che, facendo un safari blu con noi, ci ha permesso di sbarcare in Italia, ha deciso di darci una mano creando questo sito per noi! Dovreste scegliere la nostra agenzia per varie motivazioni, tra queste: i prezzi vantaggiosi, l'affidabilità date le persone testimonianti che hanno usufruito dei nostri servizi e per il fatto che in questo modo potete sostenere un agenzia locale rispetto ad un qualsiasi altro tipo di agenzia.</h4>
         </div>
     </section>
     <footer>
